<resources>
    <string name="app_name">AccessStreet</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyDOaGnM9nIrzXfJKyDjg1E00w9jX_2H4QQ</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- DATOS DE CONEXIÓN AL API -->
    <string name="accesstreet_api_host">uaccesible.francecentral.cloudapp.azure.com</string>
    <string name="accesstreet_api_port">80</string>

    <!--DATOS DE CONEXION AL API ALOJADO EN AZURE -->
    <string name="accesstreet_api_azure_host">uaccesible.francecentral.cloudapp.azure.com/</string>
    <string name="accesstreet_api_azure_port">80</string>

    <!-- LOGIN ACTIVITY -->
    <string name="login_username_label">Nombre de usuario o Correo</string>
    <string name="login_password_label">Contraseña</string>
    <string name="login_remember_label">Recuérdame</string>
    <string name="login_submit_button">Iniciar sesión</string>
    <string name="login_register_button">Regístrate</string>
    <string name="login_reset_password_link">¿Olvidaste tu contraseña?</string>

    <!-- REGISTER ACTIVITY -->
    <string name="register_title">Registro</string>
    <string name="register_name_label">Nombre de usuario</string>
    <string name="register_email_label">Correo electrónico</string>
    <string name="register_password_label">Contraseña</string>
    <string name="register_password_confirmation_label">Repetir contraseña</string>
    <string name="register_submit_button">Registrarse ahora</string>

    <!-- FORGOT PASSWORD ACTIVITY -->
    <string name="forgot_password_title">Recordar Contraseña</string>
    <string name="forgot_password_email_label">Introduce el correo electrónico</string>
    <string name="forgot_password_submit_button">Enviar</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_password_reset">PasswordResetActivity</string>

    <!-- ADD ALERT ACTIVITY -->
    <string name="title_activity_add_alert">Añadir aviso</string>
    <string name="title_interest_point">Puntos de interés</string>
    <string name="title_obstacles">Obstáculos</string>
    <string name="disabled_park_card">Plaza de aparcamiento adaptada</string>
    <string name="disabled_wc_card">Cuarto de baño adaptado</string>
    <string name="disabled_stair_card">Escalera adaptada</string>
    <string name="disabled_slope_card">Rampa de acceso adaptada</string>
    <string name="message_interest_point_created">Punto de interés creado</string>
    <string name="message_obstacle_created">Obstáculo creado</string>

    <!-- OPTIONS ACTIVITY -->
    <string name="title_options">Opciones</string>
    <string name="exit_options">Salir de la aplicación</string>
    <string name="escaleras">Escaleras</string>

    <!-- PREFERENCES ACTIVITY -->
    <string name="save_submit_button">Guardar</string>
    <string name="acousticSemaphore">Semáforo Acusticos</string>
    <string name="accessiblePark">Parking Discapacitados</string>
    <string name="accessibleWC">Baños adaptados</string>
    <string name="elevator">Ascensores</string>
    <string name="accessibleStair">Escaleras</string>
    <string name="accessibleSlope">Rampas accesibles</string>
    <string name="obstacleSlope">Rampa inaccesible</string>
    <string name="obstacleStair">Escaleras inaccesible</string>
    <string name="obstacleSidewalk">Calzada en mal estado</string>
    <string name="obstacleWorks">Zona en obras</string>
    <string name="exitApp">Salir de la aplicación</string>

    <!-- DENUNCIAS ACTIVITY -->
    <string name="denuncia_parking">Denuncia parking</string>

</resources>
