<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@+id/navigation"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/message"
    app:layout_constraintVertical_bias="0.086">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="top"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="12dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                app:cardBackgroundColor="@color/colorAccessibleParkAlert"
                app:cardCornerRadius="30dp"
                app:contentPadding="10dp"
                app:layout_constraintLeft_toRightOf="parent">


                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_accessible_park"
                    android:tint="@color/white"></ImageView>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/disabled_park_card"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@+id/view2" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="top"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="12dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                app:cardBackgroundColor="@color/colorAccessibleWCAlert"
                app:cardCornerRadius="30dp"
                app:contentPadding="10dp"
                app:layout_constraintLeft_toRightOf="parent">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_accessible_wc"
                    android:tint="@color/white"></ImageView>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/disabled_wc_card"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@+id/view3" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="top"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/view4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="12dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                app:cardBackgroundColor="@color/colorAccessibleStairAlert"
                app:cardCornerRadius="30dp"
                app:contentPadding="10dp"
                app:layout_constraintLeft_toRightOf="parent">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_accessible_stair"
                    android:tint="@color/white"></ImageView>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/disabled_stair_card"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@+id/view4" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="top"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/view5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="12dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                app:cardBackgroundColor="@color/colorAccessibleSlopeAlert"
                app:cardCornerRadius="30dp"
                app:contentPadding="10dp"
                app:layout_constraintLeft_toRightOf="parent">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_accessible_slope"
                    android:tint="@color/white"></ImageView>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/disabled_slope_card"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@+id/view5" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>